Correct post detail link color contrast

--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -4,6 +4,10 @@
   background-color: $screen;
 }
 
+.post-details a{
+  color: #004FA3;
+}
+
 .post-details .article-container {
   margin: 35px auto 0;
   font-size: 1.7rem;
